# fishy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md
.agents/summary/: architecture.md  codebase_info.md  components.md  data_models.md  dependencies.md  index.md  interfaces.md  review_notes.md  workflows.md
analysis/: Cargo.toml
analysis/src/: co_occurrence.rs  dependency.rs  distributional.rs  ds.rs  entropy.rs  evidence.rs  lib.rs  spectral.rs  types.rs
data/bgl/: dict.json
data/bgl/collections/baseline/: 0.json  meta.json
data/bgl/collections/test/: 0.json  meta.json
docs/paper/: fishy_paper.aux  fishy_paper.md  fishy_paper.out  fishy_paper.tex
encoder/: Cargo.toml
encoder/src/: dict.rs  drain.rs  lib.rs  main.rs  parser.rs  tokenizer.rs
fishy/: Cargo.toml
fishy/src/: extract.rs  gpu.rs  lib.rs  loader.rs  main.rs  types.rs
results/: ait_russellmitchell.md  ait_santos.md  bgl.md  bgl_full_report.json
scripts/: prep_ait.py  prep_bgl.py
testdata/clean/baseline/: 2.json
testdata/conflict/baseline/: 1.json  2.json
testdata/conflict/test/: 0.json  1.json
testdata/dep_break/baseline/: 2.json
testdata/dep_break/test/: 0.json  1.json  2.json
testdata/dist_shift/baseline/: 1.json  meta.json
testdata/multi_anomaly/baseline/: 0.json
testdata/multi_anomaly/test/: 0.json  1.json
testdata/spectral_shift/baseline/: 0.json
testdata/spectral_shift/test/: 0.json
