[package]
name = "encoder"
version = "0.3.0"
edition = "2021"
description = "Log file tokenizer and encoder for fishy — parses raw logs into LogCollection JSON"

[[bin]]
name = "encoder"
path = "src/main.rs"

[dependencies]
analysis = { path = "../analysis" }
fishy = { path = "../fishy" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }
